--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,3 +9,10 @@
 		--color-warning: #f39c12;
 	}
 }
+
+$screen-mobile-min: 480px;
+$screen-tablet-min: 768px;
+$screen-desktop-min: 1024px;
+
+$screen-mobile-max: $screen-tablet-min - 1;
+$screen-tablet-max: $screen-desktop-min - 1;
